--- a/lesson7/css/base.css
+++ b/lesson7/css/base.css
@@ -5,7 +5,7 @@ html {
 body {
     font-size: 14px;
 }
-body,ul {
+body,ul,li {
     margin: 0;
     padding: 0;
 }
@@ -31,7 +31,7 @@ img {
 }
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
+  -webkit-appearance: textfield;
 }
 .box {
 	margin: 0 auto;
