--- a/lesson7/css/search.css
+++ b/lesson7/css/search.css
@@ -1,7 +1,8 @@
 
 .header {
 	display: flex;
-	flex-wrap: nowrap;
+	display:box;
+	display: -webkit-box;
 	height: 1.15rem;
 	align-items:center;
 }
@@ -13,13 +14,16 @@
 }
 .search-box {
 	flex-grow: 1;
+	-webkit-box-flex: 1;
 	position: relative;
+	line-height: 1.15rem;
 	& > input {
 		width: 100%;
 		height: .8rem;
 		background-color: #e3e3e6;
 		border-radius: 5px;
-		padding-left: .8rem;
+		text-indent: .8rem;
+		padding: 0;
 	}
 }
 
@@ -43,23 +47,25 @@
 	background: url(../images/searchIcon.png) 0 0 no-repeat;
 	position: absolute;
 	left: .2rem;
-	top:.2rem;
+	top:.38rem;
 	background-size: cover;
 }
 .order-box {
 	display: flex;
+	display: -webkit-box;
 	border-bottom: 1px solid #d7d7d7;
 	height: 1.2rem;
 	align-items:center;
 	& > li {
 		flex-grow: 1;
+		-webkit-box-flex: 1;
 		text-align: center;
 		height: 100%;
 		line-height: 1.2rem;
 		& > i {
 			display: inline-block;
-			width: .428rem;
-			height: .46rem;
+			width: 1pc;
+			height: 1pc;
 			vertical-align: middle;
 		    margin-right: .12rem;
 		}
