--- a/lesson7/dest/search.css
+++ b/lesson7/dest/search.css
@@ -1,12 +1,14 @@
 
 .header {
+	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
-	-ms-flex-wrap: nowrap;
-	    flex-wrap: nowrap;
+	display:box;
+	display: -webkit-box;
 	height: 1.15rem;
-	-ms-flex-align:center;
-	    align-items:center;
+	-webkit-align-items:center;
+	    -ms-flex-align:center;
+	        align-items:center;
 }
 
 .left-box, .right-box {
@@ -14,16 +16,20 @@
 	height: 1.15rem;
 }
 .search-box {
-	-ms-flex-positive: 1;
-	    flex-grow: 1;
-	position: relative
+	-webkit-flex-grow: 1;
+	    -ms-flex-positive: 1;
+	        flex-grow: 1;
+	-webkit-box-flex: 1;
+	position: relative;
+	line-height: 1.15rem
 }
 .search-box > input {
 	width: 100%;
 	height: .8rem;
 	background-color: #e3e3e6;
 	border-radius: 5px;
-	padding-left: .8rem;
+	text-indent: .8rem;
+	padding: 0;
 }
 
 .back-icon{
@@ -46,28 +52,33 @@
 	background: url(../images/searchIcon.png) 0 0 no-repeat;
 	position: absolute;
 	left: .2rem;
-	top:.2rem;
+	top:.38rem;
 	background-size: cover;
 }
 .order-box {
+	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
+	display: -webkit-box;
 	border-bottom: 1px solid #d7d7d7;
 	height: 1.2rem;
-	-ms-flex-align:center;
-	    align-items:center
+	-webkit-align-items:center;
+	    -ms-flex-align:center;
+	        align-items:center
 }
 .order-box > li {
-	-ms-flex-positive: 1;
-	    flex-grow: 1;
+	-webkit-flex-grow: 1;
+	    -ms-flex-positive: 1;
+	        flex-grow: 1;
+	-webkit-box-flex: 1;
 	text-align: center;
 	height: 100%;
 	line-height: 1.2rem;
 }
 .order-box > li > i {
 	display: inline-block;
-	width: .428rem;
-	height: .46rem;
+	width: 1pc;
+	height: 1pc;
 	vertical-align: middle;
 	margin-right: .12rem;
 }
@@ -131,6 +142,7 @@
 }
 
 .goods-desc {
+	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
 	color: #333;
@@ -144,16 +156,19 @@
 }
 
 .goods-price {
+	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
 	height: .6rem;
-	-ms-flex-align: center;
-	    align-items: center
+	-webkit-align-items: center;
+	    -ms-flex-align: center;
+	        align-items: center
 }
 
 .goods-price > span {
-	-ms-flex-positive: 1;
-	    flex-grow: 1;
+	-webkit-flex-grow: 1;
+	    -ms-flex-positive: 1;
+	        flex-grow: 1;
 	line-height: .6rem;
 }
  
