--- a/demo18/src/app.css
+++ b/demo18/src/app.css
@@ -1,6 +1,6 @@
 body {
     background: white;
-    font-size: 100%;
+    font-family: sans-serif;
 }
 
 h3 {
@@ -10,6 +10,6 @@ h3 {
 footer {
 	margin-top: 1rem;
 	text-align: center;
-	line-height: 24px;
+	line-height: 25px;
 	color: red;
 }
