--- a/demo18/src/app.css
+++ b/demo18/src/app.css
@@ -1,15 +1,20 @@
 body {
     background: white;
     font-family: sans-serif;
+    height: 100%;
 }
 
-h3 {
+h1 {
+	margin-top: 2rem;
 	text-align: center;
+	color: orange;
 }
 
 footer {
-	margin-top: 1rem;
 	text-align: center;
-	line-height: 25px;
-	color: red;
+}
+
+p {
+	height: 200px;
+	text-indent: 20px;
 }
